Add styling improvements and update win/lose messages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./script/script.js" defer></script>
 </head>
 <body>
-    <h1>Lives: <span class="playerLivesCount"></span></h1>
+    <h1 class="page-title">Lives: <span class="playerLivesCount"></span></h1>
     <section></section>
 </body>
 </html>
